Added authors information. Cleaned up index.html

--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
-﻿svg {
+/*
+CS7443
+Scientific Information Visualization
+Dr. Bijaya Karki
+Fall 2016
+Team:
+    Sandeep Ingale
+    Shungeng Zhang
+    Parsa Amini
+*/
+svg {
     font: 12px sans-serif;
 }
 body {
